force-app/main/default/objects/IB_Summary_Metric__c/IB_Summary_Metric__c.object-meta.xml
<CustomObject>
    <label>IB Summary Metric</label>
    <nameField>
        <displayFormat>IB-SM-{000000}</displayFormat>
        <label>IB Summary Metric #</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>IB Summary Metrics</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>