force-app/main/default/objects/IB_Summary_Metric__c/fields/LastLoginTime__c.field-meta.xml
<CustomField>
    <fullName>LastLoginTime__c</fullName>
    <label>LastLoginTime</label>
    <type>DateTime</type>
</CustomField>