force-app/main/default/objects/IB_Summary_Metric__c/fields/Number_of_LDAP__c.field-meta.xml
<CustomField>
    <fullName>Number_of_LDAP__c</fullName>
    <label>Number of LDAP</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>