force-app/main/default/objects/IB_Summary_Metric__c/fields/Number_of_Microsoft_SQL_Server_2008__c.field-meta.xml
<CustomField>
    <fullName>Number_of_Microsoft_SQL_Server_2008__c</fullName>
    <label>Number of Microsoft SQL Server 2008</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>