force-app/main/default/objects/IB_Summary_Metric__c/fields/Number_of_MySQL_3_4__c.field-meta.xml
<CustomField>
    <fullName>Number_of_MySQL_3_4__c</fullName>
    <label>Number of MySQL 3/4</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>