force-app/main/default/objects/IB_Summary_Metric__c/fields/Number_of_Network_File_System_NFS__c.field-meta.xml
<CustomField>
    <fullName>Number_of_Network_File_System_NFS__c</fullName>
    <label>Number of Network File System (NFS)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>