force-app/main/default/objects/IB_Summary_Metric__c/fields/Number_of_ODBC_for_IBM_Lotus_Notes__c.field-meta.xml
<CustomField>
    <fullName>Number_of_ODBC_for_IBM_Lotus_Notes__c</fullName>
    <label>Number of ODBC for IBM Lotus Notes</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>