force-app/main/default/objects/IB_Summary_Metric__c/fields/Number_of_ODBC_for_Paradox__c.field-meta.xml
<CustomField>
    <fullName>Number_of_ODBC_for_Paradox__c</fullName>
    <label>Number of ODBC for Paradox</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>