force-app/main/default/objects/IB_Summary_Metric__c/fields/Number_of_Remote_Execution__c.field-meta.xml
<CustomField>
    <fullName>Number_of_Remote_Execution__c</fullName>
    <label>Number of Remote Execution</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>