force-app/main/default/objects/IB_Summary_Metric__c/fields/Number_of_SQL_Server_2000__c.field-meta.xml
<CustomField>
    <fullName>Number_of_SQL_Server_2000__c</fullName>
    <label>Number of SQL Server 2000</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>