force-app/main/default/objects/IB_Summary_Metric__c/fields/NumberofFTP__c.field-meta.xml
<CustomField>
    <fullName>NumberofFTP__c</fullName>
    <label>NumberofFTP</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>