force-app/main/default/objects/IB_Summary_Metric__c/fields/NumberofHTTPREST__c.field-meta.xml
<CustomField>
    <fullName>NumberofHTTPREST__c</fullName>
    <label>NumberofHTTP/REST</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>