force-app/main/default/objects/IB_Summary_Metric__c/fields/Templates_Imported_In_Last_Week__c.field-meta.xml
<CustomField>
    <fullName>Templates_Imported_In_Last_Week__c</fullName>
    <inlineHelpText>Measures as last 7 days.</inlineHelpText>
    <label>Templates Imported In Last Week</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>