force-app/main/default/objects/IB_Summary_Metric__c/fields/Total_IB_Logins_In_Last_Week__c.field-meta.xml
<CustomField>
    <fullName>Total_IB_Logins_In_Last_Week__c</fullName>
    <inlineHelpText>Measured as last 7 days.</inlineHelpText>
    <label>Total IB Logins In Last Week</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>