force-app/main/default/objects/IB_Summary_Metric__c/fields/Total_Web_Service_Enabled_Rules__c.field-meta.xml
<CustomField>
    <fullName>Total_Web_Service_Enabled_Rules__c</fullName>
    <label>Total Web Service Enabled Rules</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>