force-app/main/default/objects/IB_Summary_Metric__c/fields/TotalItemsQueued__c.field-meta.xml
<CustomField>
    <fullName>TotalItemsQueued__c</fullName>
    <label>TotalItemsQueued</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>