force-app/main/default/objects/IB_Summary_Metric__c/fields/TotalRules__c.field-meta.xml
<CustomField>
    <fullName>TotalRules__c</fullName>
    <label>TotalRules</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>