force-app/main/default/objects/IB_Summary_Metric__c/fields/WarmSwapState__c.field-meta.xml
<CustomField>
    <fullName>WarmSwapState__c</fullName>
    <label>WarmSwapState</label>
    <length>120</length>
    <type>Text</type>
</CustomField>